Fix typewrite line spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ a {
 /* This is the subheading */
 .splash-subhead {
   color: white;
-  letter-spacing: 0.05em;
+  /*letter-spacing: 0.05em;*/
 } 
 
 .faded {
